<resources>
    <!-- App -->
    <string name="app_name">openuai</string>
    <string name="action_settings">Settings</string>

    <!-- Forms -->
    <string name="add_proj">Adicionar Projeto</string>
    <string name="alt_proj">Alterar Projeto</string>
    <string name="add_user">Cadastro</string>
    <string name="titulo">Título</string>
    <string name="descricao">Descrição</string>
    <string name="disciplina">Disciplina</string>
    <string name="salvar">salvar</string>
    <string name="confirmar">confirmar</string>
    <string name="cancelar">cancelar</string>
    <string name="editar">editar</string>
    <string name="remover">remover</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="register">Cadastre-se</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">Esse email é invalido</string>
    <string name="error_invalid_password">Tamanho minimo da senha é 4 caracteres</string>
    <string name="error_incorrect_password">A senha está incorreta</string>
    <string name="error_field_required">Este campo é obrigatorio</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_add_user">Cadastro</string>
    <string name="logout">Logout</string>

    <!-- Spinner Disciplina -->
    <string name="disciplina_prompt">Disciplina</string>
    <string-array name="spinner_disciplina">
        <item>Algoritmo e Programacao Estruturada</item>
        <item>Analise e Projeto de Sistemas</item>
        <item>Banco de Dados I</item>
        <item>Banco de Dados II</item>
        <item>Comercio Eletronico</item>
        <item>Estruturas de Dados</item>
        <item>Fundamentos da Metodologia Cientifica</item>
        <item>Fundamentos de Redes de Computadores</item>
        <item>Gerencia de Projetos de Software</item>
        <item>Lingua Portuguesa</item>
        <item>Linguagens de Marcacao</item>
        <item>Linguagens de Script</item>
        <item>Metodos e Tecnicas de Pesquisa</item>
        <item>Padroes de Projeto de Software</item>
        <item>Persistencia de Objetos</item>
        <item>Psicologia do Trabalho</item>
        <item>Protocolos de Interconexao de Redes de Computadores</item>
        <item>Programacao Orientada a Objetos</item>
        <item>Programacao para Web I</item>
        <item>Programacao para Web II</item>
        <item>Programacao para Dispositivos Moveis</item>
        <item>Seguranca de Dados</item>
    </string-array>

    <!-- Toasts -->
    <string name="toast_adicionado">Projeto adicionado!</string>
    <string name="toast_alterado">Projeto alterado!</string>
    <string name="toast_removido">Projeto removido!</string>
    <string name="toast_logout">Você saiu!</string>


</resources>
