<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.AddProjectActivity">

    <LinearLayout
        android:gravity="center"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/etHeader"
            android:text="@string/add_proj"
            android:textSize="32sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/etAddProjTitulo"
            android:hint="@string/titulo"
            android:inputType="textAutoCorrect"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Spinner
            android:id="@+id/spnAddProjDisciplina"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:entries="@array/spinner_disciplina"
            android:textAlignment="center"
            android:prompt="@string/disciplina_prompt" />

    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/etAddProjDescricao"
            android:hint="@string/descricao"
            android:inputType="textAutoCorrect"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btAddProjCancelar"
            android:text="@string/cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@drawable/button_text_color" />

        <Button
            android:id="@+id/btAddProjSalvar"
            android:text="@string/salvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@drawable/button_text_color" />



    </LinearLayout>

</LinearLayout>